--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "data": "dato dump; node dato.config.js",
     "prebuild": "rimraf ./dist/",
     "build": "node ./tasks/build-html.js",
+    "precss": "rimraf ./dist/assets/css/",
+    "css": "node ./tasks/build-css.js",
     "start": "http-server 'build/' -c-1 -o -p 3000",
-    "watch": "chokidar 'dato.config.js' 'build.js' 'lib/**' 'src/**' -c 'node ./build.js'"
+    "watch": "npm-run-all --parallel watch:*",
+    "watch:data": "chokidar 'dato.config.js' -c 'npm run data'",
+    "watch:html": "chokidar './src/**/*.html' -c 'npm run build'",
+    "watch:css": "chokidar './src/**/*.scss' -c 'npm run css'"
   },
   "dependencies": {},
   "devDependencies": {
@@ -19,6 +24,8 @@
     "glob": "7.1.2",
     "http-server": "0.10.0",
     "mkdirp": "0.5.1",
+    "node-sass": "4.5.3",
+    "npm-run-all": "4.1.1",
     "nunjucks": "^3.0.1"
   },
   "repository": {
